change wrapper of resume link in main page

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://jinkyumpark.com",
+  "homepage": "https://www.jinkyumpark.com",
   "name": "main-page",
   "version": "0.1.0",
   "private": true,
