--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
-  "homepage": "https://www.jinkyumpark.com/",
+  "homepage": "https://www.jinkyumpark.com",
   "name": "main-page",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.2",
     "gh-pages": "^4.0.0",
     "html-react-parser": "^3.0.4",
