--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "name": "main-page",
   "version": "0.1.0",
   "private": false,
-
   "dependencies": {
     "bootstrap": "^5.2.2",
     "gh-pages": "^4.0.0",
@@ -16,12 +15,13 @@
     "react-router": "^6.4.2",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "postbuild": "cp build/index.html build/404.html",
+    "build": "CI=false && react-scripts build",
+    "postbuild": "cp build/index.html build/404.html && cp CNAME ./build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
@@ -44,5 +44,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.26",
+    "typescript": "^4.9.5"
   }
 }
