--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 .vscode
 .DS_STORE
 /build
+/.idea/jinkyumpark.iml
+/.idea/modules.xml
+/.idea/inspectionProfiles/Project_Default.xml
+/.idea/vcs.xml
