--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": false,
   "dependencies": {
     "bootstrap": "^5.2.2",
-    "gh-pages": "^4.0.0",
+    "gh-pages": "5.0.0",
     "html-react-parser": "^3.0.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
